Custom Views done

--- a/week4/Superhero/templates/index.html
+++ b/week4/Superhero/templates/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Superhero Gallery</h1>
     <p><a href="/admin/">Admin views for Superhero</a></p>
+    <p><a href="/hero/">List of Heroes</a></p>
 </body>
 </html>
