--- a/week5/Superhero/templates/hero_detail.html
+++ b/week5/Superhero/templates/hero_detail.html
@@ -1,23 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'hero_theme.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Superhero Detail</title>
-</head>
-
-<body>
-    <h1>Superhero</h1>
-    <h2>{{ hero.name }}</h2>
-    <p>{{ hero.description }}</p>
-    <p>
-        <img src="{{ hero.image }}" alt="{{ hero.name }}" width="500">
-    </p>
-    <p>
-        <a href="/hero/">Show all heroes</a>
-    </p>
-</body>
-
-</html>
+{% block content %}
+<h1>Superhero</h1>
+<h2>{{ hero.name }}</h2>
+<p>{{ hero.description }}</p>
+<p>
+    <img src="{{ hero.image }}" alt="{{ hero.name }}" width="500">
+</p>
+<p>
+    <a href="/hero/">Show all heroes</a>
+</p>
+{% endblock content %}
