--- a/week5/Superhero/templates/hero_theme.html
+++ b/week5/Superhero/templates/hero_theme.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Superheroes</title>
-    <link rel="stylesheet" href="styles.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 
 <body>
