--- a/week6/Superhero/templates/hero_add.html
+++ b/week6/Superhero/templates/hero_add.html
@@ -6,7 +6,7 @@
 <div>
     <form action="" method="post">{% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Save">
+        <input type="submit" value="Save"> <a href="/hero/" class="btn btn-link" role="button">Cancel</a>
     </form>
 </div>
 
