--- a/week6/Superhero/templates/hero_detail.html
+++ b/week6/Superhero/templates/hero_detail.html
@@ -1,18 +1,27 @@
 {% extends 'hero_theme.html' %}
 
 {% block content %}
-<h1>Superhero</h1>
+<h1>Superhero Details</h1>
 <h2>{{ hero.name }}</h2>
-<h3>{{ hero.identity }}</h3>
-<p>{{ hero.description }}</p>
-<ul>
-    <li>{{ hero.strength }}</li>
-    <li>{{ hero.weakness }}</li>
-</ul>
+<h3>Alias: {{ hero.identity }}</h3>
 <p>
-    <img src="{{ hero.image }}" alt="{{ hero.name }}" width="500">
+    <b>Description: </b>
+    <br>
+    {{ hero.description }}
+</p>
+<p>
+    <b>Strengths: </b>{{ hero.strength }}
+    <br>
+    <b>Weaknesses: </b>{{ hero.weakness }}
+</p>
+<p>
+    <img src="../../{{ hero.image }}" alt="{{ hero.name }}" width="500">
 </p>
 <p>
     <a href="/hero/">Show all heroes</a>
+    -
+    <a href="edit">Edit</a>
+    -
+    <a href="delete">Delete</a>
 </p>
 {% endblock content %}
