--- a/week6/Superhero/templates/hero_list.html
+++ b/week6/Superhero/templates/hero_list.html
@@ -2,15 +2,16 @@
 
 {% block content %}
 <h1>Superhero Gallery</h1>
+<p><a href="/hero/add">Add hero...</a></p>
 <ul>
     {% for hero in object_list %}
     <li>
         <h2>{{ hero.name }}</h2>
         <p>
-            <img src="{{ hero.image }}" alt="{{ hero.name }}" width="300">
+            <img src="../../{{ hero.image }}" alt="{{ hero.name }}" width="300">
         </p>
         <p>
-            <a href="{{ hero.pk }}">{{ hero.name }}</a>
+            <a href="{{ hero.pk }}">Details for {{hero.name}}</a>
             -
             <a href="{{ hero.pk }}/edit">Edit</a>
             -
