--- a/week6/Superhero/templates/hero_theme.html
+++ b/week6/Superhero/templates/hero_theme.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Superheroes</title>
     {% load static %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 
