--- a/week8/Superhero/templates/account_theme.html
+++ b/week8/Superhero/templates/account_theme.html
@@ -3,13 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Superheroes</title>
-    {% load static %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>User Authentication Demo</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
+    <link href="/static/style.css" rel="stylesheet">
 </head>
 
-{% block menu %}
+<body>
+
+
+    {% block menu %}
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container">
@@ -49,10 +56,37 @@
 
     {% endblock menu %}
 
-<body>
-    {% block content %}
-    <h2>No Main Block Defined</h2>
-    {% endblock content %}
+
+
+    {% block header %}
+    <header>
+        <h1>User Management Application</h1>
+    </header>
+    {% endblock header %}
+
+
+
+    <div class="container">
+        {% block content %}
+
+
+        {% block main %}
+        {% endblock main %}
+
+
+        {% endblock content %}
+    </div>
+
+
+    {% block footer %}
+    
+    {% endblock footer %}
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
