--- a/week8/Superhero/templates/hero_edit.html
+++ b/week8/Superhero/templates/hero_edit.html
@@ -1,13 +1,17 @@
 {% extends 'hero_theme.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
 
+<div class="container">
 <h1>Edit Existing Hero</h1>
 <div>
     <form action="" method="post">{% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <input type="submit" value="Save">
     </form>
+</div>
 </div>
 
 {% endblock content %}
